# Algebrust

./: .gitignore  README.md
algebrust/: Cargo.toml
algebrust/src/: lib.rs  matrix.rs  vector.rs
algebrust/tests/: matrix_tests.rs  vector_tests.rs
