[package]
name = "algebrust"
version = "0.1.1"
authors = ["Cameron McConnell cameron.mcconne@gmail.com"]
edition = "2021"
description = "A Rust library for basic linear algebra operations."
license = "MIT"
repository = "https://github.com/cameronMcConnell/Algebrust"
readme = "../README.md"

[dependencies]
rand = "0.8.5"
